--- a/package.json
+++ b/package.json
@@ -87,11 +87,13 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.7",
     "@material-ui/core": "^4.12.3",
     "@material-ui/styles": "^4.11.4",
     "@types/styled-components": "^5.1.12",
     "electron-squirrel-startup": "^1.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "graphql": "^15.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
